Fix element obscuring on small screens

--- a/app/assets/stylesheets/fonts.scss
+++ b/app/assets/stylesheets/fonts.scss
@@ -20,8 +20,14 @@ html {
 h1 {
   text-align: center;
 
-  @media screen and (max-width: 600px){
+  @media screen and (max-width: 992px){
     font-size: 3rem;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+  }
+
+  @media screen and (max-width: 600px){
+    font-size: 2.5rem;
     padding-left: 0.5em;
     padding-right: 0.5em;
   }
@@ -29,6 +35,10 @@ h1 {
 h2 {
   @extend .dark-text, .brand;
   font-weight: 700;
+
+  @media screen and (max-width: 992px){
+    font-size: 2.2rem;
+  }
 
   @media screen and (max-width: 600px){
     font-size: 2.2rem;
@@ -38,23 +48,37 @@ h3 {
   @extend .dark-text, .brand;
   font-weight: 700;
 
+  @media screen and (max-width: 992px){
+    font-size: 2rem;
+    line-height: 2rem;
+  }
+
   @media screen and (max-width: 600px){
     font-size: 2rem;
-    line-height: 2.4rem;
+    line-height: 2rem;
   }
 }
 h4{
   @extend .dark-text, .brand;
   font-weight: 700;
 
+  @media screen and (max-width: 992px){
+    font-size: 1.6rem;
+    line-height: 2.2rem;
+  }
+
   @media screen and (max-width: 600px){
-    font-size: 1.75rem;
+    font-size: 1.6rem;
     line-height: 2.2rem;
   }
 }
 h5{
   @extend .dark-text, .brand;
   font-weight: 700;
+
+  @media screen and (max-width: 992px){
+    font-size: 1.4rem;
+  }
 
   @media screen and (max-width: 600px){
     font-size: 1.4rem;
